load by ajax the tasks assigned to an operator. close #8

--- a/app/webroot/css/default.css
+++ b/app/webroot/css/default.css
@@ -31,7 +31,7 @@ ul.actions li{
 	background: orange;
 }
 
-.expanded-detail{
+.expanded-detail, .expanded-assigned-detail{
 	padding: 10px 50px;
 }
 
