--- a/app/Plugin/DebugKit/webroot/css/debug_toolbar.css
+++ b/app/Plugin/DebugKit/webroot/css/debug_toolbar.css
@@ -21,6 +21,7 @@
 	float: right;
 	list-style: none;
 	margin: 0;
+	padding: 0;
 }
 #debug-kit-toolbar .panel-tab {
 	clear: none;
@@ -73,10 +74,7 @@
 	display: block;
 }
 #debug-kit-toolbar .panel-tab.icon a {
-	-webkit-border-top-left-radius: 8px 8px;
-	-webkit-border-bottom-left-radius: 8px 8px;
-	-moz-border-radius-topleft: 8px;
-	-moz-border-radius-bottomleft: 8px
+	border-radius: 8px 0 0 8px;
 }
 #debug-kit-toolbar .panel-tab.icon img {
 	display:block;
@@ -120,8 +118,6 @@
 	-moz-text-shadow: 1px 1px #eee;
 }
 #debug-kit-toolbar .ui-button {
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
 	border-radius: 5px;
 }
 #debug-kit-toolbar .ui-button:hover {
@@ -139,26 +135,17 @@
 	left: 0px;
 	right: 0px;
 }
-#debug-kit-toolbar .panel-maximize,
-#debug-kit-toolbar .panel-minimize {
+#debug-kit-toolbar .panel-toggle {
 	float: right;
 	display: block;
-	width: 12px;
-	height: 12px;
-	line-height: 12px;
+	width: 16px;
+	height: 16px;
+	font-size: 16px;
+	line-height: 14px;
 	border-left: 1px solid #afafaf;
 	border-right: 1px solid #7c7c7c;
 	text-decoration: none;
-}
-#debug-kit-toolbar .panel-maximize {
-	float: right;
 	margin: 10px 20px 0 0;
-	z-index: 999;
-	position: relative;
-}
-#debug-kit-toolbar .panel-minimize {
-	float: right;
-	margin: 10px 10px 0 0;
 	z-index: 999;
 	position: relative;
 }
@@ -167,18 +154,18 @@
 #debug-kit-toolbar .panel-content {
 	display: none;
 }
-.panel-content p {
+#debug-kit-toolbar .panel-content p {
 	margin: 1em 0;
 }
-.panel-content h2 {
+#debug-kit-toolbar .panel-content h2 {
 	padding: 0;
 	margin-top:0;
 }
-.panel-content h3 {
+#debug-kit-toolbar .panel-content h3 {
 	padding: 0;
 	margin-top: 1em;
 }
-.panel-content .info {
+#debug-kit-toolbar .panel-content .info {
 	padding: 4px;
 	border-top: 1px dashed #6c6cff;
 	border-bottom: 1px dashed #6c6cff;
@@ -229,6 +216,7 @@
 	background: -moz-linear-gradient(top, #d4d4d4, #c1c1c1);
 	color: #222;
 	font-weight: bold;
+	line-height: 16px;
 }
 #debug-kit-toolbar .debug-table tr:nth-child(2n) td {
 	background: #f6f6f6;
@@ -259,48 +247,48 @@
 	list-style:none;
 	list-style-image:none;
 }
-.neat-array {
+#debug-kit-toolbar .neat-array {
 	padding: 1px 2px 1px 20px;
 	background: #CE9E23;
 	list-style: none;
 	margin: 0 0 1em 0;
 }
-.neat-array .neat-array {
+#debug-kit-toolbar .neat-array .neat-array {
 	padding: 0 0 0 20px;
 	margin: 0;
 	border-top:1px solid #CE9E23;
 }
-.neat-array li {
+#debug-kit-toolbar .neat-array li {
 	background: #FEF6E5;
 	border-top: 1px solid #CE9E23;
 	border-bottom: 1px solid #CE9E23;
 	margin: 0;
 	line-height: 1.5em;
 }
-.neat-array li:hover {
+#debug-kit-toolbar .neat-array li:hover {
 	background: #fff;
 }
-.neat-array li strong {
+#debug-kit-toolbar .neat-array li strong {
 	padding: 0 8px;
 	font-weight: bold;
 }
 
 
 /* expandable sections */
-.neat-array li.expandable {
+#debug-kit-toolbar .neat-array li.expandable {
 	cursor: pointer;
 }
-.neat-array .expanded {
+#debug-kit-toolbar .neat-array .expanded {
 	border-bottom:0;
 }
-.neat-array li.expandable.expanded > strong:before {
+#debug-kit-toolbar .neat-array li.expandable.expanded > strong:before {
 	content: 'v ';
 }
-.neat-array li.expandable.collapsed > strong:before,
-.neat-array li.expandable.expanded .expandable.collapsed > strong:before {
+#debug-kit-toolbar .neat-array li.expandable.collapsed > strong:before,
+#debug-kit-toolbar .neat-array li.expandable.expanded .expandable.collapsed > strong:before {
 	content: '> ';
 }
-.neat-array li {
+#debug-kit-toolbar .neat-array li {
 	cursor: default;
 }
 
@@ -326,39 +314,39 @@
 }
 
 /* Sql Log */
-#sql_log-tab td,
-#sql_log-tab .slow-query-container p {
+#sqllog-tab td,
+#sqllog-tab .slow-query-container p {
 	font-family: Monaco, 'Consolas', "Courier New", Courier, monospaced;
 }
-#debug-kit-toolbar #sql_log-tab a.show-slow {
+#debug-kit-toolbar #sqllog-tab a.show-slow {
 	display:block;
 	margin: 3px;
 	float:none;
 }
-#sql_log-tab .slow-query-container p {
+#sqllog-tab .slow-query-container p {
 	display:block;
 	clear:both;
 	margin: 20px 0 5px;
 }
-#debug-kit-toolbar #sql_log-tab .panel-content-data a {
+#debug-kit-toolbar #sqllog-tab .panel-content-data a {
 	background: none;
 	border:none;
 }
-#sql_log-tab .slow-query {
+#sqllog-tab .slow-query {
 	background:#e79302;
 	font-size:9px;
 	color:#fff;
 	padding: 2px;
 	white-space:nowrap;
 }
-#sql_log-tab input[type=submit] {
+#sqllog-tab input[type=submit] {
 	border: 0;
 	background: transparent;
 	cursor: pointer;
 	font-size: 12px;
 	font-family: Monaco, 'Consolas', "Courier New", Courier, monospaced;
 }
-#sql_log-tab input[type=submit]:hover {
+#sqllog-tab input[type=submit]:hover {
 	color: darkred;
 }
 
