ADD Status work time calculations

--- a/app/webroot/css/default.css
+++ b/app/webroot/css/default.css
@@ -114,7 +114,12 @@ div.comment-flag button{
 	background: gold;
 	color: #000;
 }
-
+.work-time-red{
+	color: red;
+}
+.work-time-green{
+	color: green;
+}
 td.actions{
 	text-align: left;
 }
