added start time and finish time calculations for Timing

--- a/app/webroot/css/default.css
+++ b/app/webroot/css/default.css
@@ -99,8 +99,7 @@ div.comment-flag button{
 .slack-time-red, .slack-time-green, .slack-time-yellow{
 	border-radius: 3px;
 	padding: 2px 4px;
-	display: block;
-	float: left;
+	display: inline-block;
 }
 .slack-time-red{
 	background: red;
