add TaskStats and BusyStats for /editors/all

--- a/app/webroot/css/default.css
+++ b/app/webroot/css/default.css
@@ -113,10 +113,10 @@ div.comment-flag button{
 	background: gold;
 	color: #000;
 }
-.work-time-red{
+.red{
 	color: red;
 }
-.work-time-green{
+.green{
 	color: green;
 }
 td.actions{
