fix /editors/all, iterate through each skill
* requires contain['Skill']=>array('Task'),

fix /tasks_workorders/assigments, calculate TaskStats based on current Task
* use contain['Skill']['conditions'] = array('Skill.task_id'=>$params['task_id']); to filter Editors with skill for given Task

use Editor[work_week] to calculate workday_hours

--- a/app/webroot/css/default.css
+++ b/app/webroot/css/default.css
@@ -95,7 +95,9 @@ div.comment-flag button{
 	border: 1px solid #ccc;
 	padding: 2px;
 }
-
+.operator-list .assigned {
+	background-color: #C9C9C9;
+}
 .slack-time-red, .slack-time-green, .slack-time-yellow{
 	border-radius: 3px;
 	padding: 2px 4px;
