--- a/app/webroot/css/default.css
+++ b/app/webroot/css/default.css
@@ -15,6 +15,7 @@ textarea{
 	color: #C92434;
 }
 
+
 ul.actions li{
 	display: inline;
 }
@@ -58,14 +59,44 @@ span.flagged, span.cleared{
 span.cleared{
 	background: green;
 }
-
-div.activity_logs li{
+.inline > * {
+	display: inline-block;
+	margin-right: 4px;
+}
+div.activity-log .inline > *{
+	vertical-align: top;
+}
+div.activity-log .aside {
+	padding: 2px;
+	border-radius: 2px;
+	overflow: hidden;
+}
+div.activity-log .aside img{
+	box-shadow: 0 0 8px #8FB9D0;
+	border: 4px solid #FFFFFF;
+	height: 48px;
+	width: 48px;
+}
+div.activity-log .body {
+	width: 80%;
+}
+div.activity-log .header {
+	font-size:0.8em;
+	margin-bottom: 2px;
+}
+div.activity-log .header .flag{
+	border-radius: 3px;
+	cursor: pointer;
+	padding: 2px 4px;
+}
+div.activity-log li {
 	margin-bottom: 10px;
 	border-bottom: 1px solid #ccc;
 	padding-bottom: 10px;
+	list-style-type: none
 }
 
-div.activity_logs li li{
+div.activity-log li li{
 	border: 0;
 	padding: 2px;
 	margin: 2px 7px;
@@ -157,4 +188,113 @@ td.actions{
 .editor-profile-badge a, .editor-profile-badge h3  {
  	display: inline-block;
  	vertical-align: bottom;
+}
+
+div.comment-form form textarea{
+	width: 100%;
+	padding: 0 4px;
+}
+
+div.comment-form form button {
+	border-radius: 10px;
+	-moz-border-radius: 10px;
+	-webkit-border-radius: 10px;
+}
+
+/* http://www.colorzilla.com/gradient-editor/ */
+:not(.disabled).orange {
+/*	http://www.colorzilla.com/gradient-editor/#f9c667+0,f79621+100;Custom*/
+	background: #f9c667 !important; /* Old browsers */	
+	background: -moz-linear-gradient(top, #f9c667 0%, #f79621 100%) !important; /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f9c667), color-stop(100%,#f79621)) !important; /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #f9c667 0%,#f79621 100%) !important; /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #f9c667 0%,#f79621 100%) !important; /* Opera 11.10+ */
+	background: -ms-linear-gradient(top, #f9c667 0%,#f79621 100%) !important; /* IE10+ */
+	background: linear-gradient(top, #f9c667 0%,#f79621 100%) !important; /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f9c667', endColorstr='#f79621',GradientType=0 ) !important; /* IE6-9 */
+	border: 1px solid #f79621 !important;
+	color: #000 !important;	
+}
+
+:not(.disabled).red {
+/*http://www.colorzilla.com/gradient-editor/#ff9191+0,d12c1d+100;Custom*/
+	background: #ff0505; /* Old browsers */
+	background: -moz-linear-gradient(top,  #ff0505 0%, #881b12 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ff0505), color-stop(100%,#881b12)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  #ff0505 0%,#881b12 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  #ff0505 0%,#881b12 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  #ff0505 0%,#881b12 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  #ff0505 0%,#881b12 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff0505', endColorstr='#881b12',GradientType=0 ); /* IE6-9 */
+	border: 1px solid #f79621 !important;
+	color: #FFF !important;	
+}
+:hover:not(.disabled).red {
+/*http://www.colorzilla.com/gradient-editor/#ff9191+0,d12c1d+100;Custom*/
+	background: #ff8181; /* Old browsers */
+	background: -moz-linear-gradient(top,  #ff8181 0%, #ca291a 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ff8181), color-stop(100%,#ca291a)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  #ff8181 0%,#ca291a 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  #ff8181 0%,#ca291a 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  #ff8181 0%,#ca291a 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  #ff8181 0%,#ca291a 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff8181', endColorstr='#ca291a',GradientType=0 ); /* IE6-9 */
+	border: 1px solid #f79621 !important;
+	color: #FFF !important;	
+}
+
+:not(.disabled).green {	
+	background: #c6f77e !important; /* Old browsers */
+	background: -moz-linear-gradient(top, #c6f77e 0%, #8ecc2a 100%) !important; /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#c6f77e), color-stop(100%,#8ecc2a)) !important; /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #c6f77e 0%,#8ecc2a 100%) !important; /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #c6f77e 0%,#8ecc2a 100%) !important; /* Opera 11.10+ */
+	background: -ms-linear-gradient(top, #c6f77e 0%,#8ecc2a 100%) !important; /* IE10+ */
+	background: linear-gradient(top, #c6f77e 0%,#8ecc2a 100%) !important; /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c6f77e', endColorstr='#8ecc2a',GradientType=0 ) !important; /* IE6-9 */	
+	border: 1px solid #8ecc2a !important;
+	color: #000 !important;
+}
+:not(.disabled).gray {	
+	background: #d8d8d8; /* Old browsers */
+	background: -moz-linear-gradient(top,  #d8d8d8 0%, #969696 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#d8d8d8), color-stop(100%,#969696)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  #d8d8d8 0%,#969696 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  #d8d8d8 0%,#969696 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  #d8d8d8 0%,#969696 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  #d8d8d8 0%,#969696 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d8d8d8', endColorstr='#969696',GradientType=0 ); /* IE6-9 */
+}
+:hover:not(.disabled).gray {	
+background: #f0f0f0; /* Old browsers */
+background: -moz-linear-gradient(top,  #f0f0f0 0%, #bcbcbc 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f0f0f0), color-stop(100%,#bcbcbc)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  #f0f0f0 0%,#bcbcbc 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  #f0f0f0 0%,#bcbcbc 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  #f0f0f0 0%,#bcbcbc 100%); /* IE10+ */
+background: linear-gradient(to bottom,  #f0f0f0 0%,#bcbcbc 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0f0f0', endColorstr='#bcbcbc',GradientType=0 ); /* IE6-9 */
+}
+:hover:not(.disabled).orange, :hover:not(.disabled).white {
+	background: #fcd894 !important; /* Old browsers */
+	background: -moz-linear-gradient(top, #fcd894 0%, #fbb763 100%)!important; /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fcd894), color-stop(100%,#fbb763))!important; /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #fcd894 0%,#fbb763 100%)!important; /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #fcd894 0%,#fbb763 100%)!important; /* Opera 11.10+ */
+	background: -ms-linear-gradient(top, #fcd894 0%,#fbb763 100%)!important; /* IE10+ */
+	background: linear-gradient(top, #fcd894 0%,#fbb763 100%)!important; /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcd894', endColorstr='#fbb763',GradientType=0 ) !important; /* IE6-9 */
+	border: 1px solid #BF721A !important;
+	color: #000;
+}
+:hover:not(.disabled).green {
+	background: #d8fba3 !important; /* Old browsers */
+	background: -moz-linear-gradient(top, #d8fba3 0%, #b3e95d 100%)!important; /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#d8fba3), color-stop(100%,#b3e95d))!important; /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #d8fba3 0%,#b3e95d 100%)!important; /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #d8fba3 0%,#b3e95d 100%)!important; /* Opera 11.10+ */
+	background: -ms-linear-gradient(top, #d8fba3 0%,#b3e95d 100%)!important; /* IE10+ */
+	background: linear-gradient(top, #d8fba3 0%,#b3e95d 100%)!important; /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d8fba3', endColorstr='#b3e95d',GradientType=0 ) !important; /* IE6-9 */
+	border: 1px solid #5A7F1A !important;
 }
