--- a/app/webroot/css/wms.css
+++ b/app/webroot/css/wms.css
@@ -220,3 +220,9 @@ div.comment-form form .actions {
 .navbar.navbar-inverse .nav-collapse .nav > li.active > a {
 	color: #FFF;
 }
+
+.navbar .role {
+	margin-left: 20px;
+	display:inline;
+	line-height: 40px;
+}
